samples/_failures_safe/1761547053_5fa6f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4318bb9e.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_4318bb9e.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_4318bb9e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4318bb9e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4318bb9e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4318bb9e.c:160:17: error: expected declaration or statement at end of input
